--- a/index.html
+++ b/index.html
@@ -1,6 +1,112 @@
-<html>
-<head></head>
+ <html class="bg">
+<head>
+<link rel="stylesheet" href="assets/css/style.css">
+
+<link rel="icon" type="image/x-icon" href="assets/favicon.png">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+  
+.container {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 56.25%; 
+  box-shadow: 7px 7px 5px -5px rgba(0,0,0,0.24);
+  /* 16:9 Aspect Ratio */
+}
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+/* .x{
+  background-image: url(assets/thumbs/thumb_paper.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain ;
+  padding: 5%;
+  style="padding-top: 14%;
+} */
+iframe {border:0px;}
+</style>
+
+</head>
 <body>
-  Hello World
+<br>
+<center>
+
+
+<iframe scrolling="no" width="100%" style="border:0px;" src="nav.html"></iframe>
+<div id="card">
+<br>
+Hello, my name is Sade. i am an artist specialized in 2D animations and character designs <br> i've previously works on projects like 
+<a href="https://youtu.be/O3kACEkvySI?t=14" id="bg_yellow">Animaniacs</a> 
+<a href="https://youtu.be/ZArlzeNNAEs?t=7" id="bg_cyan">Helluvaboss</a> 
+<a href="https://youtu.be/XhhEXK3NkzU?t=12" id="bg_lime">Hi-Fi Rush</a> 
+and <a href="https://www.linkedin.com/in/sadewa-dika-sadewoo-b1722a11b/details/experience/">more</a><br><br>
+</div>
+
+<br>
+<!-- <div id="card" > -->
+
+<!-- <table style="width:80%"> -->
+  <!-- <tr>
+    <td class="x"><video src="https://www.sakugabooru.com/data/39d0c77bc67f9d89b153b5ec2372574e.mp4" width="100%" poster="assets/thumbs/thumb_dot.png" controls></video></td>
+    <td class="x"><video src="https://www.sakugabooru.com/data/601d1b670733b4d281e4ba51d0f33f11.mp4" width="100%" poster="assets/thumbs/thumb_korsica.jpg" controls></video></video></td>
+  </tr> -->
+<!-- </table><br> -->
+<div class="container"> 
+  <iframe  class="responsive-iframe" src="https://www.youtube.com/embed/dZmaqrJGw98?autoplay=0&modestbranding=0&controls=1&mute=1"></iframe></iframe>
+</div>
+
+
+<!-- </div> -->
+<br>
+
+<div id="card">
+<br>
+<h1>Character Designs and Drawings</h1>
+
+<table style="width:100%">
+  <tr>
+    <td><img src="assets/drawings/ga_3.png" width="100%"/></td>
+  </tr>
+</table>
+<table style="width:100%">
+  <tr>
+    <td><img src="assets/drawings/ga_0.png" width="100%"/></td>
+    <td><img src="assets/drawings/ga_1.png" width="100%"></td>
+    <td><img src="assets/drawings/ga_2.png" width="100%"></td>
+    
+  </tr>
+</table>
+<table style="width:100%">
+
+  <tr>
+    <td><img src="assets/drawings/taifau.png" width="100%"/></td>
+    <td><img src="assets/drawings/pomni.png" width="100%"/></td>
+    <td><img src="assets/drawings/ga_4.png" width="100%"/></td>
+  </tr>
+</table>
+<br>
+</div>
+<br>
+<div id="card">
+<br>
+
+For inquiries contact me at <br><a href="mailto:sade.animation@gmail.com" id="bg_yellow">sade.animation@gmail.com</a>
+
+<br><br>
+Thankyou for the visit and have a wonderful day !
+<br><br>
+</div>
+
+</center>
 </body>
-</html>
+</html> 
