--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ and <a href="https://www.linkedin.com/in/sadewa-dika-sadewoo-b1722a11b/details/e
   </tr> -->
 <!-- </table><br> -->
 <div class="container"> 
-  <iframe  class="responsive-iframe" width=640 height=360 src="https://www.youtube.com/embed/dZmaqrJGw98?autoplay=0&modestbranding=0&controls=1&mute=1"></iframe></iframe>
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/dZmaqrJGw98?autoplay=0&modestbranding=0&controls=1&mute=1"></iframe></iframe>
 </div>
 
 
