--- a/index.html
+++ b/index.html
@@ -53,16 +53,9 @@ and <a href="https://www.linkedin.com/in/sadewa-dika-sadewoo-b1722a11b/details/e
 </div>
 
 <br>
-<!-- <div id="card" > -->
-
-<!-- <table style="width:80%"> -->
-  <!-- <tr>
-    <td class="x"><video src="https://www.sakugabooru.com/data/39d0c77bc67f9d89b153b5ec2372574e.mp4" width="100%" poster="assets/thumbs/thumb_dot.png" controls></video></td>
-    <td class="x"><video src="https://www.sakugabooru.com/data/601d1b670733b4d281e4ba51d0f33f11.mp4" width="100%" poster="assets/thumbs/thumb_korsica.jpg" controls></video></video></td>
-  </tr> -->
-<!-- </table><br> -->
+ <div id="card">
 <iframe width="640" height="360" src="https://www.youtube.com/embed/dZmaqrJGw98?autoplay=0&modestbranding=0&controls=1&mute=1"></iframe></iframe>
-
+ </div>
 
 <!-- </div> -->
 <br>
