--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@ and <a href="https://www.linkedin.com/in/sadewa-dika-sadewoo-b1722a11b/details/e
     
   </tr>
 </table>
-<table style="width:100%">
+<!--    <table style="width:100%">
 
   <tr>
     <td><img src="assets/drawings/taifau.png" width="100%"/></td>
-<!--     <td><img src="assets/drawings/pomni.png" width="100%"/></td>
-    <td><img src="assets/drawings/ga_4.png" width="100%"/></td> -->
-  </tr>
-</table>
+<td><img src="assets/drawings/pomni.png" width="100%"/></td>
+    <td><img src="assets/drawings/ga_4.png" width="100%"/></td>
+  </tr> 
+</table>-->
 <br>
 </div>
 <br>
