--- a/nav.html
+++ b/nav.html
@@ -34,8 +34,8 @@
   
   <center>
     <br>
-    <a target="_parent" href="https://sadesade.neocities.org"><button class="button">HOME</button></a>
-    <a target="_parent" href="https://sadesade.neocities.org/blog"><button class="button button2">BLOG</button></a>
+    <a target="_parent" href="https://spikysaurus.github.io/works/"><button class="button">HOME</button></a>
+    <a target="_parent" href="https://spikysaurus.github.io/works/blog"><button class="button button2">BLOG</button></a>
     <a target="_parent" href="https://linktr.ee/sadewoo"><button class="button button3">LINKTREE</button></a>
     <a target="_parent"  href="mailto:sade.animation@gmail.com"><button class="button button4">CONTACT</button></a>
   </center>
