--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                 <td width="45%">
                     <a target="_blank" href="https://www.youtube.com/watch?v=YgDx3x98qnM"><button class="btn"><img class="img-full"  src="https://i.ytimg.com/an_webp/YgDx3x98qnM/mqdefault_6s.webp?du=3000&sqp=CP24mLIG&rs=AOn4CLAwUtm4ZzXDX--3TE2FadwSAbxbdA"></img></button></a>
                     <br>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=YgDx3x98qnM"><button class="btn"><img class="img-full"  src="https://i.ytimg.com/an_webp/O3kACEkvySI/mqdefault_6s.webp?du=3000&sqp=CJaRmLIG&rs=AOn4CLCEHEqQH-4a6pGSQ2dckgly3y4MYA"></img></button></a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=O3kACEkvySI"><button class="btn"><img class="img-full"  src="https://i.ytimg.com/an_webp/O3kACEkvySI/mqdefault_6s.webp?du=3000&sqp=CJaRmLIG&rs=AOn4CLCEHEqQH-4a6pGSQ2dckgly3y4MYA"></img></button></a>
                     <br>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=YgDx3x98qnM"><button class="btn"><img class="img-full"  src="https://i.ytimg.com/vi/XhhEXK3NkzU/hqdefault.jpg?sqp=-oaymwEcCNACELwBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCxgS47vkU0yHZ3pexMu4RZfJ1Kjg"></img></button></a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XhhEXK3NkzU"><button class="btn"><img class="img-full"  src="https://i.ytimg.com/vi/XhhEXK3NkzU/hqdefault.jpg?sqp=-oaymwEcCNACELwBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCxgS47vkU0yHZ3pexMu4RZfJ1Kjg"></img></button></a>
                     <br>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=YgDx3x98qnM"><button class="btn"><img class="img-full"  src="https://i.ytimg.com/an_webp/ZArlzeNNAEs/mqdefault_6s.webp?du=3000&sqp=CMS5mLIG&rs=AOn4CLCSRaBZipJFCv5XBLPMGzgAfWhUSg"></img></button></a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=ZArlzeNNAEs"><button class="btn"><img class="img-full"  src="https://i.ytimg.com/an_webp/ZArlzeNNAEs/mqdefault_6s.webp?du=3000&sqp=CMS5mLIG&rs=AOn4CLCSRaBZipJFCv5XBLPMGzgAfWhUSg"></img></button></a>
                 </td>
                 <td width="55%">
                     <img class="img-full"  src="assets/drawings/ga_2.png"/>
