--- a/pages/sakugagp/wiki.html
+++ b/pages/sakugagp/wiki.html
@@ -338,6 +338,7 @@
                                 <ul>
                                     <li>
                                         Check your LO Image Template's dimensions in the File Explorer<br>
+                                        If you don't have the Template, download <a href="assets/images/template.png" target="_blank">here</a><br>
                                         <img width=30% src="assets/images/tempexplorerdimension.jpg"/>
                                     </li>
                                     <li>
@@ -363,7 +364,6 @@
                                     </li>
                                     <li>
                                         Go to File > Import > Images as Planes and find your LO Image Template<br>
-                                        If you don't have one, download <a href="assets/images/template.png" target="_blank">here</a><br>
                                         <img width=30% src="assets/images/tempimportimgasplane.jpg"/>
                                     </li>
                                     <li>
