--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="#animation" target="_self"><button class="btn-link">Animation</button></a>
         <a href="#character-design" target="_self"><button class="btn-link">Character Design</button></a>
         <a href="#art" target="_self"><button class="btn-link">Art</button></a>
-        <a target="_self" href="pages/sakugagp/wiki.html"><button class="btn-link">SakugaGP</button></a>
+        <a target="_self" href="pages/sakugagp/manual.html"><button class="btn-link">SakugaGP</button></a>
     </center>
     <div class="card">
         <table width="100%"class="header">
@@ -75,7 +75,7 @@
                                                         
                                                         <tr>
                                                             <td>
-                                                                <a target="_self" href="pages/sakugagp/wiki.html"><button class="btn-link">SakugaGP - Blender Addon</button></a>
+                                                                <a target="_self" href="pages/sakugagp/manual.html"><button class="btn-link">SakugaGP - Blender Addon</button></a>
                                                             </td>
                                                         </tr>
                                                         
