--- a/pages/sakugagp/manual.html
+++ b/pages/sakugagp/manual.html
@@ -37,6 +37,27 @@
                                 <td>🧪 = Experimental</td>
                             </tr>
                         </table>
+                        <details>
+                            <summary>SakugaGP v1.0.6 </summary>
+                            <table>
+                                <tr>
+                                    <td>
+                                        <b>UI improvement :</b>
+                                        <ul>
+                                            <li>Layer Panel is hidden by default, can be enabled in the preferences</li>
+                                            <li>Context/N-Panel Toggle Buttons are hidden by default , can be enabled in the preferences</li>
+                                            <li>Added more buttons to the Dopesheet's Layer Panel (Toggle Onion Skins and Toggle Auto Lock Layers)</li>
+                                            <li>Auto Select Active Material is also hidden by default (Having to rearrange Materials everytime will be tedious, so i mark this as a experimental feature.)</li>
+                                            <li>Added Overscan toggle button in the Templates popover</li>
+                                        </ul>
+                                        <b>New Feature :</b>
+                                        <ul>
+                                            <li>✨ New Toggle Mute Camera Transforms , Will mute all Camera Action's Transform channels (So you can still flip/rotate camera when playing the animation)</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                            </table>
+                        </details>
 
                         <details>
                             <summary>SakugaGP v1.0.5 - v1.0.5c </summary>
