--- a/pages/sakugagp/manual.html
+++ b/pages/sakugagp/manual.html
@@ -241,6 +241,14 @@
 
                             <details>
                                 <summary>
+                                    <b>Mute Camera Transforms</b>
+                                </summary>
+                                Will mute all Camera Action's Transform channels (So you can still flip/rotate camera while playing the animation).<br>
+                                <video controls src="assets/videos/mute_camera_transforms.mp4" type="video/mp4"></video>
+                            </details>
+
+                            <details>
+                                <summary>
                                     <b>Insert a Grease Pencil Text</b>
                                 </summary>
                                 <ul>
@@ -323,7 +331,9 @@
                                 To disable Viewport's Rotation , so you wont accidentally rotating it while moving the Viewport.<br>
                                 <img width=30% src="assets/images/region.jpg"/>
                             </details>
-                            
+
+
+
                             <details>
                                 <summary>
                                     <b>Making Anime Template</b>
