--- a/pages/sakugagp/manual.html
+++ b/pages/sakugagp/manual.html
@@ -336,7 +336,7 @@
 
                             <details>
                                 <summary>
-                                    <b>Making Anime Template</b>
+                                    <b>Using Anime Template</b>
                                 </summary>
                                 <hr noshade size=2 color=white width=100%>
                                 <b>Installing Camera Overscan Addon and Enable Import Images as Planes Addon</b>
