--- a/index.html
+++ b/index.html
@@ -11,22 +11,16 @@
         <a target="_self" href="pages/sakugagp/manual.html"><button class="btn-link">SakugaGP (Blender Addon)</button></a>
     </center>
     <div class="card">
-        <table width="100%"class="header">
-            <tr ><td>Introduction</td></tr>
-        </table>
-
-        <table width=100%>  
-            <tr>
-                <td>
-                            <p>I'm a Freelance 2D animator known as <b>Sadewoo</b> previously worked on Video Game Trailers, Cartoons, Animes and <a href="https://www.linkedin.com/in/sadewa-dika-sadewoo-b1722a11b/">more</a></p>
-
-                </td>
-            </tr>
-
-            <tr>
-                <td >
+        <style>
+        .intro{
+        background-color:transparent;
+        }
+        </style>
+        <table width=100% class="intro">
+                <td width=50% style="text-align:center;">
+                <p>I'm a Freelance 2D animator known as <b>Sadewoo</b><br>Previously worked on Video Game Trailers, Cartoons, Animes and <a href="https://www.linkedin.com/in/sadewa-dika-sadewoo-b1722a11b/">more</a></p>
                             Contact
-                            <a href="mailto:sade.animation@gmail.com"><button class="btn-link">Work Email : sade.animation@gmail.com</button></a>
+                            <a href="mailto:sade.animation@gmail.com"><button class="btn-link">Email : sade.animation@gmail.com</button></a>
                             <br>
                             Blogs
                             <a href="https://www.tumblr.com/sadewoo"><button class="btn-link">Tumblr</button></a>
@@ -37,11 +31,10 @@
                             <a href="https://www.linkedin.com/in/sadewa-dika-sadewoo-b1722a11b/"><button class="btn-link">LinkedIn</button></a>
                             <a href="https://sadewoo.gumroad.com/"><button class="btn-link">Gumroad</button></a>
                         <br>
-                        <a "href="https://sadewoo.newgrounds.com/"><img width="150px" src="https://upload.wikimedia.org/wikipedia/commons/8/87/Newgrounds-logo.png"/></a>
+                        <a href="https://sadewoo.newgrounds.com/"><img width="150px" src="https://upload.wikimedia.org/wikipedia/commons/8/87/Newgrounds-logo.png"/></a>
 
-                        <a "href="https://www.youtube.com/sadewoo0"><img width="100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/YouTube_light_logo_%282017%29.svg/1024px-YouTube_light_logo_%282017%29.svg.png"/></a>
+                        <a href="https://www.youtube.com/sadewoo0"><img width="100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/YouTube_light_logo_%282017%29.svg/1024px-YouTube_light_logo_%282017%29.svg.png"/></a>
                 </td>
-                <td ><img class="img" src="assets/drawings/corat_coret.png"/></td>
             </tr>
         </table>
     </div>
@@ -144,7 +137,7 @@
                 <td><a href="https://kin29man-anime.com/"><b>Kinnikuman: Perfect Origin Hen</b></a></td>
                 <td>Production I.G</td>
                 <td>2024</td>
-                <td><button class="btn-link" >TBA</button></td>
+                <td><button class="btn-link" ></button></td>
             </tr>
             <tr>
                 <td><a href="https://www.yaiba-pr.com/"><b>Kenyuu densetsu Yaiba</b></a></td>
