--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <br>
     <style>
     .button_bg{
-        background-image: url('assets/thumbs/thumb_dot.png');
+        background-image: url('https://media1.tenor.com/m/jdc4anUgEpMAAAAC/explosion-explode.gif');
         background-size:cover;
         background-position:center;
         color:white;
@@ -137,7 +137,7 @@
                 <td><a href="https://kin29man-anime.com/"><b>Kinnikuman: Perfect Origin Hen</b></a></td>
                 <td>Production I.G</td>
                 <td>2024</td>
-                <td><button class="btn-link" ></button></td>
+                <td><button class="btn-link" >TBA</button></td>
             </tr>
             <tr>
                 <td><a href="https://www.yaiba-pr.com/"><b>Kenyuu densetsu Yaiba</b></a></td>
