--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
 
         <table width=100%>
             <tr>
-                <td><a href="https://kin29man-anime.com/"><b>Kinnikuman: Perfect Origin Hen</b></a></td>
+                <td><a href="https://kin29man-anime.com/"><b>Kinnikuman: Perfect Origin Hen (EP:06)</b></a></td>
                 <td>Production I.G</td>
                 <td>2024</td>
-                <td><button class="btn-link" >TBA</button></td>
+                <td><a href="https://www.instagram.com/p/C-1uMqTzi-N/?img_index=5"><button class="btn-link" >Credits</button</a>></td>
             </tr>
             <tr>
                 <td><a href="https://www.yaiba-pr.com/"><b>Kenyuu densetsu Yaiba</b></a></td>
