--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <tr ><td>Animation Works (Anime)</td></tr>
         </table>
         <center>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Bi_s_g2l1Yk?si=KD9PPlQ0uL22jAhZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/Bi_s_g2l1Yk?si=KD9PPlQ0uL22jAhZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </center>
         <table width=100%>
             <tr>
