--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     }
     </style>
     <div id="animation"></div>
-    <a href="https://youtu.be/dZmaqrJGw98">
+    <a href="https://www.youtube.com/playlist?list=PLdk56EjsMhfjwymlCUUltcL63fZDmyZvZ">
     <button class="button_bg">
-    <h1><b>▶️ Watch Animation Reel (2023)</b></h1>
+    <h1><b>▶️ Watch Animation Reel</b></h1>
     </button>
     </a>
 
