--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
                             Blogs
                             <a href="https://www.tumblr.com/sadewoo"><button class="btn-link">Tumblr</button></a>
                             <a href="https://twitter.com/sadewoo0"><button class="btn-link">Twitter</button></a>
+                            <a href="https://bsky.app/profile/spikysaurus.bsky.social"><button class="btn-link">Bluesky</button></a>
                             <a href="https://www.instagram.com/sadewoo0"><button class="btn-link">Instagram</button></a>
                             <br>
                             Other
                             <a href="https://www.linkedin.com/in/sadewa-dika-sadewoo-b1722a11b/"><button class="btn-link">LinkedIn</button></a>
                             <a href="https://sadewoo.gumroad.com/"><button class="btn-link">Gumroad</button></a>
                         <br>
-                        <a href="https://sadewoo.newgrounds.com/"><img width="150px" src="https://upload.wikimedia.org/wikipedia/commons/8/87/Newgrounds-logo.png"/></a>
+                            Art & Animations
+                        <a href="https://sadewoo.newgrounds.com/"><button class="btn-link">Newgrounds</button></a>
 
-                        <a href="https://www.youtube.com/sadewoo0"><img width="100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/YouTube_light_logo_%282017%29.svg/1024px-YouTube_light_logo_%282017%29.svg.png"/></a>
+                        <a href="https://www.youtube.com/sadewoo0"><button class="btn-link">Youtube</button></a>
                 </td>
             </tr>
         </table>
@@ -54,99 +56,90 @@
     }
     </style>
     <div id="animation"></div>
-    <a href="https://www.youtube.com/playlist?list=PLdk56EjsMhfjwymlCUUltcL63fZDmyZvZ">
-    <button class="button_bg">
-    <h1><b>▶️ Watch Animation Reel</b></h1>
-    </button>
-    </a>
+
+
+
+    <style>
+     .gallery{
+        background: black;
+      }
+        .style{
+          float: left;
+          padding: 10px;
+        }
+        img {
+      height: 150px;
+      width: 100%;
+  }
+  </style>
+
+
 
     <div class="card">
         <table width="100%"class="header">
-            <tr ><td>Animation Works (Western)</td></tr>
+            <tr ><td>Animation Works</td></tr>
+        </table>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/videoseries?si=wasjbgMcgpvEuvTI&amp;list=PLdk56EjsMhfjwymlCUUltcL63fZDmyZvZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <table width="100%">
+            <tr ><td>Western</td></tr>
         </table>
         <table width=100%>
-
-            <tr>
-                <td><a href="https://www.youtube.com/watch?v=-JlkxDSJMjA"><b>Friday Night Funkin</b></a></td>
-                <td>Newgrounds</td>
-                <td>2024</td>
-
-                <td><a href="assets/videos/fnf.mp4"><button class="btn-link" >Watch Animation</button></a></td>
-
-            </tr>
-
-            <tr>
-                <td><a href="https://www.imdb.com/title/tt13972010/"><b>Animaniacs</b></a></td>
-                <td>Studio Yotta</td>
-                <td>2020</td>
-                <td><a href="assets/videos/animaniacs.mp4"><button class="btn-link" >Watch Animation</button></a></td>
-            </tr>
-
-            <tr>
-                <td><a href="https://www.imdb.com/title/tt17154734"><b>Craig Before The Creek</b></a></td>
-                <td>Studio Yotta</td>
-                <td>2023</td>
-                <td><a href="assets/videos/craigbeforethecreek.mp4"><button class="btn-link" >Watch Animation</button></a></td>
-            </tr>
-
-            <tr>
-                <td><a href="https://www.imdb.com/title/tt13573450"><b>I Heart Arlo</b></a></td>
-                <td>Titmouse</td>
-                <td>2021</td>
-                <td><a href="assets/videos/arlo.mp4"><button class="btn-link" >Watch Animation</button></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://www.youtube.com/watch?v=yXErLiSbxXQ"><b>Helluvaboss</b></a></td>
-                <td>Chaos Emporium</td>
-                <td>2021</td>
-                <td><a href="assets/videos/helluvaboss.mp4"><button class="btn-link" >Watch Animation</button></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://store.steampowered.com/app/1817230/HiFi_RUSH/"><b>Hi-Fi Rush</b></a></td>
-                <td>Titmouse</td>
-                <td>2023</td>
-                <td><a href="assets/videos/hifirush.mp4"><button class="btn-link" >Watch Animation</button></a></td>
-            </tr>
-
-            <tr>
-                <td><a href="https://store.steampowered.com/app/1812370/Little_Goody_Two_Shoes/"><b>Little Goody Two Shoes</b></a></td>
-                <td>AstralShift</td>
-                <td>2023</td>
-                <td><a href="https://sadewoo.tumblr.com/post/732936987201404928/post-animation-little-goody-two-shoes-trailer"><button class="btn-link" >Watch Animation</button></a></td>
-            </tr>
-
-            <tr>
-                <td><a"><b>Video Game Trailers</b></a></td>
-                <td>Studio Yotta</td>
-                <td>2021+</td>
-                <td><a><button class="btn-link" >TBA</button></a></td>
-            </tr>
+            <div class="gallery">
 
 
+                <div class="style">
+                  <a href="https://www.youtube.com/watch?v=O3kACEkvySI"><img src="https://m.media-amazon.com/images/M/MV5BOGExYmQ1N2QtYzE2YS00ZTE2LWEwZTItZjUwNTNhYzJiYjdlXkEyXkFqcGc@._V1_.jpg" alt=""></a>
+                </div>
+                 <div class="style">
+                    <a href="https://www.youtube.com/watch?v=p5pbg6SNWDg"><img src="https://m.media-amazon.com/images/M/MV5BYjhmNTAzYmQtMzFkMi00NzEyLWJhMzctZmM2NzRmYmE3MTU4XkEyXkFqcGc@._V1_.jpg" alt=""></a>
+                </div>
+                    <div class="style">
+                        <a href="https://www.youtube.com/watch?v=00_sb0h2mRQ&list=PLdk56EjsMhfjwymlCUUltcL63fZDmyZvZ&index=6&pp=gAQBiAQB" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BMjkxOWUzNmEtZTMyMC00Y2Y2LTk2OGUtZjQzNTc0NDg2NGQ5XkEyXkFqcGc@._V1_.jpg" alt=""></a>
+                    </div>
+                <div class="style">
+                  <a href="https://https://www.youtube.com/watch?v=IeXNLjLW2FY" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BZTg4MDRiMTktOWYyZS00YTIwLTg5ODItYWFmNGExZTg1NWEzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
+                </div>
+                      <div class="style">
+                  <a href="https://www.youtube.com/watch?v=ZArlzeNNAEs" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BM2E4MDU4NDctNjIxZC00ZWM5LTkyNDQtOGU0MTRhYWVmNzQ5XkEyXkFqcGc@._V1_.jpg" alt=""></a>
+                </div>
 
 
+            </div>
         </table>
     </div>
     <div class="card">
-        <table width="100%"class="header">
-            <tr ><td>Animation Works (Anime)</td></tr>
+        <table width="100%">
+            <tr ><td>Anime</td></tr>
         </table>
-        <center>
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/Bi_s_g2l1Yk?si=KD9PPlQ0uL22jAhZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </center>
+
         <table width=100%>
-            <tr>
-                <td><a href="https://kin29man-anime.com/"><b>Kinnikuman: Perfect Origin Hen (EP:06)</b></a></td>
-                <td>Production I.G</td>
-                <td>2024</td>
-                <td><a href="https://x.com/sadewoo0/status/1825404127251407115"><button class="btn-link" >Credits</button></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://www.yaiba-pr.com/"><b>Kenyuu densetsu Yaiba</b></a></td>
-                <td>TBA</td>
-                <td>TBA</td>
-                <td><button class="btn-link" >TBA</button></td>
-            </tr>
+             <div class="gallery">
+                 <div class="style">
+                   <a href="https://www.youtube.com/watch?v=Bi_s_g2l1Yk" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BNWI5YmIwNGMtYmZlMS00NmJjLWJkMjAtNTQ3NjVlMGVmNzUwXkEyXkFqcGc@._V1_.jpg" alt=""></a>
+                 </div>
+                 <div class="style">
+                   <a href="https://x.com/sadewoo0/status/1831290864435429642" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BNGVmZWZmYjctYTQyNS00NTVkLWIxNTctZGQwMzQzMGJkMzIyXkEyXkFqcGc@._V1_.jpg" alt=""></a>
+                 </div>
+             </div>
+        </table>
+    </div>
+    <div class="card">
+        <table width="100%">
+            <tr ><td>Video Game Trailer and Cutscenes</td></tr>
+        </table>
+
+        <table width=100%>
+             <div class="gallery">
+                 <div class="style">
+                  <a href="https://www.youtube.com/watch?v=YgDx3x98qnM"><img src="https://m.media-amazon.com/images/M/MV5BMmMwYzZjMzAtN2I3Ny00MTdhLTg1Y2YtNDZiMzhhODY3ZjJjXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
+                </div>
+                <div class="style">
+                    <a href="https://www.youtube.com/watch?v=XhhEXK3NkzU" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BZWJlZTM2OWYtYTkxZC00OTQyLThjOWEtN2VkOGE1MTFmNGQxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
+                </div>
+                <div class="style">
+            <a href="https://sadewoo.tumblr.com/post/732936987201404928/post-animation-little-goody-two-shoes-trailer" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BZjkwNDkwMzEtZDZhZC00MGI1LTk0YmUtMzE0NWUzZjdlYjM1XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
+          </div>
+             </div>
         </table>
     </div>
     <br>
@@ -154,7 +147,7 @@
         <table width="100%"class="header">
             <tr ><td>Personal Animation and Commissions</td></tr>
         </table>
-
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/videoseries?si=l6klKTXXTn6qx0zi&amp;list=PLdk56EjsMhfj6a9J9RT5HNcWPZWDDycAR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <table width=100% >
             <tr>
                 <td><b>Beast Rising</b></td>
@@ -192,37 +185,93 @@
             </tr>
 
             <tr>
-                <td><b>100 Demon Fantasia</b></td>
+                <td><b><a href="assets/thumbs/100df.jpeg" target="_blank">100 Demon Fantasia</b></td>
                 <td>Commission</td>
                 <td>Short Animation</td>
                 <td><a><button class="btn-link" >TBA</button></a></td>
             </tr>
         </table>
-        <td><img width=100% src="assets/thumbs/100df.jpeg"></img></td>
     </div>
     <br>
 
-    
+
 
     <div class="card" id="character-design">
         <table width="100%"class="header">
-            <tr ><td>Character Designs (Personal)</td></tr>
+            <tr ><td>Personal Art</td></tr>
         </table>
 
-        <table width=100%>
-            <tr>
-                <td>
-                    <td>Besides animation i also enjoy designing characters, here are my Original Character Sheets and some fan-designs : </td>
-                </td>
-            </tr>
-        </table>
-        <img width="100%" src="assets/drawings/ga_2.png"/><br>
-        <img width="100%" src="assets/drawings/ga_3.png"/><br>
-        <img width="100%" src="assets/drawings/ga.webp"/><br>
-        <img width="100%" src="assets/drawings/pupududu.png"/><br>
-        <img width="100%" src="assets/drawings/MLAATR_Characters_01.png"/><br>
-        <img width="100%" src="assets/drawings/MLAATR_Characters_02.png"/><br>
-        <img width="100%" src="assets/drawings/reinz.png"/><br>
+        <div class="gallery">
+            <div class="style">
+              <a href="https://bsky.app/profile/spikysaurus.bsky.social/post/3l3yxukeruc2s"><img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreifsjyoha6nic6h3iof337gfthkfuzpcvlvj3f26qoqnax7xkb2c6u@jpeg"/></a>
+            </div>
+
+            <div class="style">
+              <a href="assets/drawings/ga_2.png"><img src="assets/drawings/ga_2.png"/></a>
+            </div>
+            <div class="style">
+              <a href="assets/drawings/ga_3.png"><img src="assets/drawings/ga_3.png"/></a>
+            </div>
+            <div class="style">
+              <a href="assets/drawings/ga.webp"><img src="assets/drawings/ga.webp"/></a>
+            </div>
+            <div class="style">
+              <a href="assets/drawings/pupududu.png"><img src="assets/drawings/pupududu.png"></a>
+            </div>
+            <div class="style">
+              <a href="assets/drawings/MLAATR_Characters_01.png"><img src="assets/drawings/MLAATR_Characters_01.png"/></a>
+            </div>
+            <div class="style">
+              <a href="assets/drawings/MLAATR_Characters_02.png"><img src="assets/drawings/MLAATR_Characters_02.png"/></a>
+            </div>
+            <div class="style">
+              <a href="assets/drawings/reinz.png"><img src="assets/drawings/reinz.png"/></a>
+            </div>
+            <div class="style">
+              <a href="https://bsky.app/profile/spikysaurus.bsky.social/post/3l665nqlsuj2k"><img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreih72acdn6akin24y46irpvnttjnndijr3whm6g4xenpdwmsvtvn3u@jpeg"/></a>
+            </div>
+            <div class="style">
+              <a href="https://bsky.app/profile/spikysaurus.bsky.social/post/3l666nrprch2q"><img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreihynaym4mgx7phmiwxoa35xq7m6lx6qn53tbn2cqagvo7dfievqa4@jpeg"/></a>
+            </div>
+            <div class="style">
+              <a href="https://bsky.app/profile/spikysaurus.bsky.social/post/3l5xgnhcprf23"><img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreidac7w63ttn6e6sng2x27syfidwf5wxiehh3zfjrljseoydtpye4y@jpeg"/></a>
+            </div>
+            <div class="style">
+              <a href="https://bsky.app/profile/spikysaurus.bsky.social/post/3l4zfzizbpu2m"><img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreigx2mxz3uehxdgemyc65vcjryqswufrbrcmbwn4nufipquakzefrm@jpeg"/></a>
+            </div>
+            <div class="style">
+              <a href="https://bsky.app/profile/spikysaurus.bsky.social/post/3l4vejsguvs2n"><img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreigs33oygacbrttxnetoi33wtg7fyknbqfpqpy3arqxwnuvgqmjkl4@jpeg"/></a>
+            </div>
+            <div class="style">
+              <a href="https://bsky.app/profile/spikysaurus.bsky.social/post/3l4utouzvcx2v"><img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreibhzv3frzwcd4ossphpbunvf2mn7mbmn7vcgr5x7mavn2w664geyy@jpeg"/></a>
+            </div>
+
+
+
+            <div class="style">
+              <a href="https://bsky.app/profile/spikysaurus.bsky.social/post/3l3yogp6tys2b"><img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreicvzqupg2xcs3jq2bv3ntlhyxwvcoilhaystjonbva5fzambviynm@jpeg"/></a>
+            </div>
+
+            <div class="style">
+              <a href="https://bsky.app/profile/spikysaurus.bsky.social/post/3l3yodlonji24"><img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreihsskayvg6aiaufkthv7vf2esl5tdf5vxj5ovsztxfppg7aqaktb4@jpeg"/></a>
+            </div>
+
+            <div class="style">
+              <a href="https://bsky.app/profile/spikysaurus.bsky.social/post/3l3yodlonji24"><img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreicpnkfob6xb2fdftrd2wr4dykv3hkzaftk5h5geuzimr2mqjwqele@jpeg"/></a>
+            </div>
+
+            <div class="style">
+              <a href="https://bsky.app/profile/spikysaurus.bsky.social/post/3l3yobq4am72i"><img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiansplxddfoxnykrxagrvk3m6ipzu2okzpnzkocmnidzzgrzv37eu@jpeg"/></a>
+            </div>
+
+            <div class="style">
+              <a href="https://bsky.app/profile/spikysaurus.bsky.social/post/3l3yobq4am72i"><img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreie6zq67tihespon43cheixhkjxmloybrbbqcivioeb7uu2mshfnnm@jpeg"/></a>
+            </div>
+
+            <div class="style">
+              <a href="https://bsky.app/profile/spikysaurus.bsky.social/post/3l3yobq4am72i"><img src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:rilzezic2mcf5kcalccrzwtx/bafkreiemo2upzui2yqsaijnc3bbgvxrir5ku23d3rxyj5xsdyqqjfbh5ey@jpeg"/></a>
+            </div>
+        </div>
     </div>
     <br>
 </body>
