--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ section {
 				<a href="https://www.youtube.com/watch?v=O3kACEkvySI" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BOGExYmQ1N2QtYzE2YS00ZTE2LWEwZTItZjUwNTNhYzJiYjdlXkEyXkFqcGc@._V1_.jpg" alt=""></a>
 		<a href="https://www.youtube.com/watch?v=p5pbg6SNWDg"target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BYjhmNTAzYmQtMzFkMi00NzEyLWJhMzctZmM2NzRmYmE3MTU4XkEyXkFqcGc@._V1_.jpg" alt=""></a>
 		<a href="https://www.youtube.com/watch?v=00_sb0h2mRQ&list=PLdk56EjsMhfjwymlCUUltcL63fZDmyZvZ&index=6&pp=gAQBiAQB" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BMjkxOWUzNmEtZTMyMC00Y2Y2LTk2OGUtZjQzNTc0NDg2NGQ5XkEyXkFqcGc@._V1_.jpg" alt=""></a>
-		<a href="https://https://www.youtube.com/watch?v=IeXNLjLW2FY" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BZTg4MDRiMTktOWYyZS00YTIwLTg5ODItYWFmNGExZTg1NWEzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
+		<a href="https://www.youtube.com/watch?v=IeXNLjLW2FY" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BZTg4MDRiMTktOWYyZS00YTIwLTg5ODItYWFmNGExZTg1NWEzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt=""></a>
 		<a href="https://www.youtube.com/watch?v=ZArlzeNNAEs" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BM2E4MDU4NDctNjIxZC00ZWM5LTkyNDQtOGU0MTRhYWVmNzQ5XkEyXkFqcGc@._V1_.jpg" alt=""></a>
 		<a href="https://www.youtube.com/watch?v=eH-ujKvm4Pc&pp=ygUPcG9ydCBieSB0aGUgc2Vh" target="_blank"><img class="poster" src="https://m.media-amazon.com/images/M/MV5BZjI1OTUxYmUtYzZjYy00MmYwLTliNjMtMDdmMmU1NGIxNDJjXkEyXkFqcGdeQXVyNjgwMTM2Njk@._V1_FMjpg_UX1000_.jpg" alt=""></a>
 			</div>
